manifests/update-manifests-kustomize-taskflow/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow-ingress
spec:
  rules:
  - host: "taskflow-dev.local"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: taskflow-api-service
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: taskflow-api-service
            port:
              number: 8080
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: taskflow-api-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskflow-frontend-service
            port:
              number: 3000
